--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@emotion/styled": "^11.11.0",
     "@mediapipe/tasks-vision": "^0.10.10",
     "@mui/material": "^5.15.11",
+    "@mui/x-date-pickers": "^7.1.1",
     "@tensorflow/tfjs": "^4.17.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "express": "^4.18.3",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
