--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mediapipe/tasks-vision": "^0.10.10",
     "@mui/material": "^5.15.11",
+    "@mui/x-charts": "^7.1.1",
     "@mui/x-date-pickers": "^7.1.1",
     "@tensorflow/tfjs": "^4.17.0",
     "@testing-library/jest-dom": "^5.17.0",
