--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mediapipe/tasks-vision": "^0.10.10",
+    "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-charts": "^7.1.1",
     "@mui/x-date-pickers": "^7.1.1",
@@ -17,10 +18,13 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "express": "^4.18.3",
+    "i18next": "^23.16.4",
+    "i18next-browser-languagedetector": "^8.0.0",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "sqlite3": "^5.1.7",
