--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "express": "^4.18.3",
+    "express-session": "^1.18.1",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "knex": "^3.1.0",
